新建数据访问接口的项目，后面用来跨平台

--- a/src/ListenTogether.Business/ListenTogether.Business.csproj
+++ b/src/ListenTogether.Business/ListenTogether.Business.csproj
@@ -7,6 +7,7 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+		<ProjectReference Include="..\ListenTogether.Data.Interface\ListenTogether.Data.Interface.csproj" />
 		<ProjectReference Include="..\ListenTogether.Data\ListenTogether.Data.csproj" />
 		<ProjectReference Include="..\ListenTogether.Model\ListenTogether.Model.csproj" />
 		<ProjectReference Include="..\ListenTogether.Network\ListenTogether.Network.csproj" />
