--- a/src/ListenTogether/ListenTogether.csproj
+++ b/src/ListenTogether/ListenTogether.csproj
@@ -64,7 +64,7 @@
 	<ItemGroup>
 		<PackageReference Include="CommunityToolkit.Maui" Version="5.0.0" />
 		<PackageReference Include="CommunityToolkit.Mvvm" Version="8.1.0" />
-		<PackageReference Include="JiuLing.CommonLibs" Version="1.5.6" />
+		<PackageReference Include="JiuLing.CommonLibs" Version="1.5.7" />
 		<PackageReference Include="JiuLing.Controls.Maui" Version="0.0.13" />
 		<PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="7.0.0" />
 		<PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="7.0.4" />
@@ -75,6 +75,7 @@
 
 	<ItemGroup>
 		<ProjectReference Include="..\ListenTogether.Business\ListenTogether.Business.csproj" />
+		<ProjectReference Include="..\ListenTogether.Data.Maui\ListenTogether.Data.Maui.csproj" />
 		<ProjectReference Include="..\ListenTogether.EasyLog\ListenTogether.EasyLog.csproj" />
 		<ProjectReference Include="..\ListenTogether.Model\ListenTogether.Model.csproj" />
 		<ProjectReference Include="..\NativeMediaMauiLib\NativeMediaMauiLib.csproj" />
