--- a/src/ListenTogether.Business/ListenTogether.Business.csproj
+++ b/src/ListenTogether.Business/ListenTogether.Business.csproj
@@ -7,8 +7,8 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<ProjectReference Include="..\ListenTogether.Data.Api\ListenTogether.Data.Api.csproj" />
-		<ProjectReference Include="..\ListenTogether.Data.Interface\ListenTogether.Data.Interface.csproj" />
+		<ProjectReference Include="..\ListenTogether.Data.Api\ListenTogether.Service.Common.csproj" />
+		<ProjectReference Include="..\ListenTogether.Data.Interface\ListenTogether.Service.Interface.csproj" />
 		<ProjectReference Include="..\ListenTogether.Model\ListenTogether.Model.csproj" />
 		<ProjectReference Include="..\ListenTogether.Network\ListenTogether.Network.csproj" />
 	</ItemGroup>
