--- a/src/ListenTogether/ListenTogether.csproj
+++ b/src/ListenTogether/ListenTogether.csproj
@@ -75,7 +75,7 @@
 
 	<ItemGroup>
 		<ProjectReference Include="..\ListenTogether.Business\ListenTogether.Business.csproj" />
-		<ProjectReference Include="..\ListenTogether.Data.Maui\ListenTogether.Data.Maui.csproj" />
+		<ProjectReference Include="..\ListenTogether.Service.Maui\ListenTogether.Service.Maui.csproj" />
 		<ProjectReference Include="..\ListenTogether.EasyLog\ListenTogether.EasyLog.csproj" />
 		<ProjectReference Include="..\ListenTogether.Model\ListenTogether.Model.csproj" />
 		<ProjectReference Include="..\NativeMediaMauiLib\NativeMediaMauiLib.csproj" />
