--- a/src/ListenTogetherMauiBlazor/ListenTogetherMauiBlazor.csproj
+++ b/src/ListenTogetherMauiBlazor/ListenTogetherMauiBlazor.csproj
@@ -75,6 +75,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
+		<ProjectReference Include="..\ListenTogether.Service.Common\ListenTogether.Service.Common.csproj" />
 		<ProjectReference Include="..\ListenTogether.Service.Maui\ListenTogether.Service.Maui.csproj" />
 		<ProjectReference Include="..\ListenTogether.Pages\ListenTogether.Pages.csproj" />
 		<ProjectReference Include="..\NativeMediaMauiLib\NativeMediaMauiLib.csproj" />
