--- a/src/ListenTogether.Api/appsettings.json
+++ b/src/ListenTogether.Api/appsettings.json
@@ -7,10 +7,10 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DbConnection": "Server=localhost;Port=6662;Database=ListenTogether;User Id=jiuling;Password=gb1T3q*gcs5uv%DN;"
+    "DbConnection": ""
   },
   "AppSettings": {
-    "Secret": "ubnid9LdcK2wLae4ubnixxxxd9LdcK2wLae4",
+    "Secret": "",
     "RefreshTokenTTL": 2,
     "TokenExpireDay": 30
   }
