--- a/src/ListenTogetherMauiBlazor/ListenTogetherMauiBlazor.csproj
+++ b/src/ListenTogetherMauiBlazor/ListenTogetherMauiBlazor.csproj
@@ -71,7 +71,9 @@
 		<PackageReference Include="Sve.Blazor.InfiniteScroll" Version="1.0.0-alpha" />
 	</ItemGroup>
 	<ItemGroup Condition="$(TargetFramework.Contains('-windows'))">
-		<PackageReference Include="PInvoke.User32" Version="0.7.124" />
+		<PackageReference Include="Microsoft.Windows.CsWin32" Version="0.3.49-beta">
+			<PrivateAssets>all</PrivateAssets>
+		</PackageReference>
 		<PackageReference Include="System.Management" Version="7.0.2" />
 	</ItemGroup>
 
